--- a/templates/applications/clear-events.yaml
+++ b/templates/applications/clear-events.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.clearEvents.autoscaling.enabled }}
-  replicas: {{ include "docspace.replicas" (list . .Values.clearEvents.replicaCount) }}
+  replicas: {{ default .Values.replicas .Values.clearEvents.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
