--- a/templates/applications/doceditor.yaml
+++ b/templates/applications/doceditor.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.doceditor.autoscaling.enabled }}
-  replicas: {{ include "docspace.replicas" (list . .Values.doceditor.replicaCount) }}
+  replicas: {{ default .Values.replicas .Values.doceditor.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
