--- a/templates/applications/healthchecks.yaml
+++ b/templates/applications/healthchecks.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.healthchecks.autoscaling.enabled }}
-  replicas: {{ include "docspace.replicas" (list . .Values.healthchecks.replicaCount) }}
+  replicas: {{ default .Values.replicas .Values.healthchecks.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
