--- a/templates/applications/identity.yaml
+++ b/templates/applications/identity.yaml
@@ -16,7 +16,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.identity.authorization.autoscaling.enabled }}
-  replicas: {{ include "docspace.replicas" (list . .Values.identity.authorization.replicaCount) }}
+  replicas: {{ default .Values.replicas .Values.identity.authorization.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
