--- a/templates/applications/management.yaml
+++ b/templates/applications/management.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.management.autoscaling.enabled }}
-  replicas: {{ include "docspace.replicas" (list . .Values.management.replicaCount) }}
+  replicas: {{ default .Values.replicas .Values.management.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
