--- a/templates/applications/studio-notify.yaml
+++ b/templates/applications/studio-notify.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.studioNotify.autoscaling.enabled }}
-  replicas: {{ include "docspace.replicas" (list . .Values.studioNotify.replicaCount) }}
+  replicas: {{ default .Values.replicas .Values.studioNotify.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
